re PR fortran/68055 (ICE on using unsupported kinds in program without program statement)

2015-10-29  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/68055
	* decl.c (gfc_match_decl_type_spec): Check for valid kind in old-style
	declarations.

2015-10-29  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/68055
	* gfortran.dg/pr68055.f90: New case.

From-SVN: r229560